Add -pom file -runner class -feature files